--- a/Clickbank-TedsWoodWorking/teds-woodworking.css
+++ b/Clickbank-TedsWoodWorking/teds-woodworking.css
@@ -3,6 +3,7 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .divheaderimg{
@@ -21,9 +22,39 @@
     flex-direction: column;
     padding: 30px 50px;
     font-size: 30px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-p {
+.divheaderh2 > p {
     font-size: 0.7em;
+}
+
+.heresWhat{
+    background-image: linear-gradient(#fff, #dbdbdb);
+    padding: 30px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;   
+}
+
+.heresWhatc1_div1 > p{
+    font-size: 1.25em;
+    padding: 5px;
+}
+
+.check {
+    width: 25px;
+}
+
+.heresWhatc1_div1_h2{
+    font-size: 30px;
+    padding: 10px;
+    color: #BE4500;
+}
+
+.heresWhatc1_div1_h2img{
+    width: 70%;
+    padding: 30px 0px;
+    
 }
