--- a/Clickbank-TedsWoodWorking/teds-woodworking.css
+++ b/Clickbank-TedsWoodWorking/teds-woodworking.css
@@ -6,12 +6,16 @@
     margin: 0px;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .divheaderimg{
     background-image: linear-gradient(#fff, #fff, #fff, #dbdbdb);
     padding: 10px;
     padding-left: 5%;
+
 }
 
 .divheaderh2{
@@ -39,7 +43,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-      
+    
 }
 
 .heresWhatc1 {
@@ -204,11 +208,17 @@
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px 15px;
+    
 }
 
 .sumario {
     font-size: 1.1em;
-    
+    list-style-type: '• ';
+    cursor: pointer;
+}
+
+details[open] > summary {
+    list-style-type: '↓ ';
 }
 
 .pduv {
@@ -218,11 +228,83 @@
     
 }
 
+.questions-all{
+    width: 90%;
+}
 
+.heresWhatc1_div1_h3{
+    font-size: 30px;
+    padding: 10px;
+    color: #0066C5;
+    text-align: left;
+}
+
+.heresWhatc1_div1_h3p {
+    text-align: left;
+    font-size: 1.15em;
+}
+
+.heresWhat5 {
+    columns: 2;
+    background-image: linear-gradient(#dbdbdb, #dbdbdb, #fff, #fff);
+    padding: 30px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+      
+}
+
+.heresWhat5-1{
+    width: 50%;
+}
+
+.heresWhat5-2{
+    width: 50%;
+    scale: 100%;
+}
+
+.footer {
+    background-color: #FFFBF0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 30px 10px;
+}
+
+.footerp {
+    font-size: 0.7em;
+    padding: 0px 50px;
+}
 
 
 @media screen and (max-width: 768px){
+    
+    .heresWhatc1{
+        width: 100%;
+    }
+
     .heresWhatc2 {
         display: none;
+    }
+
+    .questions-all{
+        
+        columns: 1;
+    }
+
+    .heresWhat5{
+        columns: 1;
+        flex-direction: column;
+    }
+
+    .heresWhat5-1{
+        width: 100%;
+    }
+
+    .heresWhat5-2{
+        width: 100%;
     }
 }
